SPITBALL-852 Sign screens (sign in and sign up) - alignment issue

--- a/Cloudents.Web/ClientApp/components/new_registration/login.less
+++ b/Cloudents.Web/ClientApp/components/new_registration/login.less
@@ -580,6 +580,7 @@
         margin-top: 40px;
         text-transform: capitalize;
         font-weight: normal;
+        margin: 0;
         &:hover {
           background: lighten(@google-btn-bg, 10%);
           border: 1px solid @google-btn-bg;
